@@ -6,6 +6,8 @@ Revision history for {{$dist->name}}
         - a few improvements to help given by "dzil help COMMAND"
         - fixes a situation where exclusion-regexp-building in GatherDir
           could mangle the given regexps
+        - now properly merging distmeta fragments together without loss, using
+          new CPAN::Meta::Merge (Karen Etheridge)
 
 5.020     2014-07-28 20:56:25-04:00 America/New_York
         - the default required version for ExtUtils::MakeMaker in [MakeMaker]
